# firefly-led-framework

./: .gitignore  .gitmodules  CMakeLists.txt  HomeAssistant-Arduino-Pico-Guide  HomeAssistant-Arduino-Pico-Guide.md  README.md  makefsdata.py  pico.env
include/: FreeRTOSConfig.h  htmldata.c  lwipopts.h
source/: config.h  main.cpp
source/Effects/: Effect.cpp  Effect.h  ExampleEffect.cpp  ExampleEffect.h
source/Effects/Basics/: ExampleEffect.cpp  ExampleEffect.h  FireFly.cpp  FireFly.h  SingleTime.cpp  SingleTime.h  WaveformLED.cpp  WaveformLED.h
source/Effects/Images/: Heart.cpp  Heart.h  ImageEffect.h  SpaceXLogo.cpp  SpaceXLogo.h
source/Effects/SoundReactive/: CircleEffect.cpp  CircleEffect.h  NathanChase.cpp  NathanChase.h  SoundPixel.cpp  SoundPixel.h
source/HomeAssistant/: Credentials.h  HAIntegration.cpp  HAIntegration.h  HASwitch.h  ha_mqtt.c  ha_mqtt.h
source/Patterns/: ExamplePattern.cpp  ExamplePattern.h  Pattern.cpp  Pattern.h
source/Patterns/Examples/: ExamplePattern.cpp  ExamplePattern.h  FireFlies.cpp  FireFlies.h  FireFliesSame.cpp  FireFliesSame.h  Nederland.cpp  Nederland.h
source/Patterns/SoundReactive/: Ben.cpp  Ben.h  CirclesPattern.cpp  CirclesPattern.h  HeartPattern.cpp  HeartPattern.h  Nathan.cpp  Nathan.h  Shakeel.cpp  Shakeel.h  ShakeelFlash.cpp  ShakeelFlash.h  SpaceX.cpp  SpaceX.h
source/Patterns/Wireless/: WirelessPattern.cpp  WirelessPattern.h
source/homeAssistant/: HAIntegration.cpp  HAIntegration.h
source/kylarLEDs/Controllers/: Controller.cpp  Controller.h  FireFlyController.cpp  FireFlyController.h
source/kylarLEDs/Controllers/FireFly/: FireFlyController.cpp  FireFlyController.h  rp2040_pio.h
source/kylarLEDs/Controllers/FireFly/Sensors/Button/: Button.cpp  Button.h  bootsel_button.c  bootsel_button.h
source/kylarLEDs/Controllers/FireFly/Sensors/CO2/: CO2.cpp  CO2.h
source/kylarLEDs/Controllers/FireFly/Sensors/CO2/driver/: scd41_basic.c  scd41_basic.h
source/kylarLEDs/Controllers/FireFly/Sensors/Encoder/: Encoder.cpp  Encoder.h
source/kylarLEDs/Controllers/FireFly/Sensors/Microphone/: Microphone.cpp  Microphone.h
source/kylarLEDs/Controllers/FireFly/Sensors/Microphone/pdm_mic/: audio_spectrogram.c  audio_spectrogram.h  pdm_microphone.c  pdm_microphone.h
source/kylarLEDs/Controllers/FireFly/Sensors/Potentiometer/: Potentiometer.cpp
source/kylarLEDs/Controllers/FireFlyW/: FireFlyWController.cpp  FireFlyWController.h  rp2040_pio.h
source/kylarLEDs/Controllers/FireFlyW/Sensors/Encoder/: Encoder.cpp
source/kylarLEDs/Controllers/FireFlyW/Sensors/Microphone/: Microphone.h
source/kylarLEDs/Controllers/FireFlyW/Sensors/Microphone/pdm_mic/: audio_spectrogram.h  pdm_microphone.c
source/kylarLEDs/Controllers/FireFlyW/Sensors/Microphone/pdm_mic/OpenPDM2PCM/: OpenPDMFilter.h
source/kylarLEDs/Controllers/FireFlyW/Sensors/Potentiometer/: Potentiometer.cpp
source/kylarLEDs/Controllers/FireFlyW/WiFi/: cgi.h  ssi.h  wifi.c  wifi.h
source/kylarLEDs/Controllers/Sensors/Button/: Button.cpp
source/kylarLEDs/Controllers/Sensors/Encoder/: Encoder.cpp
source/kylarLEDs/Controllers/Sensors/HomeAssistant/: HAIntegration.cpp  HAIntegration.h  flash.c  flash.h  ha_mqtt.c  ha_mqtt.h
source/kylarLEDs/Controllers/Sensors/MQTT/: Credentials.h  HAIntegration.cpp  HAIntegration.h  MQTT.cpp  MQTT.h  Network.cpp  Network.h
source/kylarLEDs/Controllers/Sensors/MQTT/WiFi/: Common.cpp  Common.h  CoreMutex.cpp  CoreMutex.h  IPAddress.cpp  IPAddress.h  LwipEthernet.cpp  LwipEthernet.h  LwipIntf.h  LwipIntfDev.h  Print.cpp  Print.h  SPI.cpp  SPI.h  SpecialInterrupts.h  String.cpp  String.h  WiFi.h  WiFiClass.cpp  WiFiClass.h  WiFiClient.cpp  WiFiClient.h  dtostrf.c  dtostrf.h  lwIP_CYW43.h  pins_arduino.h  wiring_digital.cpp  wiring_private.cpp
source/kylarLEDs/Controllers/Sensors/MQTT/WiFi/utility/: CYW43shim.cpp  CYW43shim.h  lwIP_nodriver.h  nodriver.h
source/kylarLEDs/Controllers/Sensors/Microphone/: Microphone.cpp
source/kylarLEDs/Controllers/Sensors/Microphone/pdm_mic/: audio_spectrogram.c  audio_spectrogram.h  pdm_mic_pio.h
source/kylarLEDs/Controllers/Sensors/Potentiometer/: Potentiometer.h
source/kylarLEDs/EffectEngine/: EffectEngine.cpp  EffectEngine.h
source/kylarLEDs/Generators/: Generator.cpp  Generator.h
source/kylarLEDs/LEDInterface/: ColorUtil.cpp  ColorUtil.h  LEDChange.cpp  LEDChange.h  LEDInterface.cpp  LEDInterface.h  LEDStrip.cpp  LEDStrip.h  LEDs.cpp  LEDs.h  colorUtil.h
source/kylarLEDs/Sensors/: Sensor.cpp  Sensor.h
source/kylarLEDs/Utility/: ExecTimer.cpp  ExecTimer.h  Timing.cpp  Timing.h
source/kylarLEDs/Utility/Waveforms/: Triangle.cpp  Triangle.h  Waveform.cpp  Waveform.h
utils/: pico
